# scratchypy

./: .gitignore  LICENSE  README.md  all-documents.html  classIndex.html  doc.md  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  requirements.txt  scratchypy.color.html  scratchypy.eventcallback.EventCallback.html  scratchypy.eventcallback.html  scratchypy.html  scratchypy.image.html  scratchypy.sound.html  scratchypy.sprite.AnimatedSprite.html  scratchypy.sprite.Sprite.html  scratchypy.sprite.TextSprite.html  scratchypy.sprite.html  scratchypy.stage.Stage.html  scratchypy.stage.html  scratchypy.text.AskDialog.html  scratchypy.text.html  scratchypy.util.html  scratchypy.version.html  scratchypy.window.Window.html  scratchypy.window._RollingAverage.html  scratchypy.window.html  searchindex.json  undoccedSummary.html
.github/workflows/: apidocs.yml
doc/: README.md  api.md  build.md  internals.md  makeDoc.sh
examples/: main.py  messages.py  quickstart.py  stage.py  text.py  waves.py
scratchypy/: __init__.py  color.py  decorator.py  eventcallback.py  image.py  sound.py  sprite.py  stage.py  text.py  thread.py  util.py  version.py  window.py
